<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- automa_parking strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_5_30_pm_string">5:30 PM</string>
    <string name="hello__dissanayake_string">Hello, Dissanayake</string>
    <string name="purchase_history_string">Purchase History</string>
    <string name="download_bill_string">Download Bill</string>
    <string name="date__08_12_2021_order_number__12903_total_amount__rs___2500_string">Date: 08/12/2021Order Number: 12903Total Amount: RS/- 2500</string>
    <string name="date__10_09_2021_order_number__312324_total_amount__rs___5000_string">Date: 10/09/2021Order Number: 312324Total Amount: RS/- 5000</string>
    <string name="date__05_01_2020_order_number__8678_total_amount__rs___1500_string">Date: 05/01/2020Order Number: 8678Total Amount: RS/- 1500</string>
    <string name="date__03_10_2019_order_number__09975_total_amount__rs___500_string">Date: 03/10/2019Order Number: 09975Total Amount: RS/- 500</string>
    <string name="more_info______string">more info.....</string>
    <string name="more_info______ek1_string">more info.....</string>
    <string name="more_info______ek2_string">more info.....</string>
    <string name="more_info______ek3_string">more info.....</string>
    <string name="note_only_the_latest_bill_can_be_edited___downloaded_string">Note only the latest bill can be edited &amp; downloaded</string>
    <string name="edit_bill_string">Edit Bill</string>
    <string name="delete_order_string">Delete Order</string>
    <string name="_5_30_pm_ek1_string">5:30 PM</string>
    <string name="hello__dissanayake_ek1_string">Hello, Dissanayake</string>
    <string name="card_number_string">Card Number</string>
    <string name="full_name_string">Full Name</string>
    <string name="expiry_date_string">Expiry Date</string>
    <string name="cvv_string">CVV</string>
    <string name="quantity_item_price_string">Quantity      Item                                       Price</string>
    <string name="_2_latte_rs___1000_1_expresso_rs___1500_string">           2             LATTE                                  RS/- 1000           1             EXPRESSO                          RS/- 1500</string>
    <string name="rs___25000_string">RS/- 25000</string>
    <string name="cancel_order_string">Cancel Order</string>
    <string name="total___string">Total :</string>
    <string name="_5_30_pm_ek2_string">5:30 PM</string>
    <string name="hello__dissanayake_ek2_string">Hello, Dissanayake</string>
    <string name="search_coffee_string">Search Coffee</string>
    <string name="coffee_string">Coffee</string>
    <string name="espresso_string">Espresso</string>
    <string name="cappuccino_string">Cappuccino</string>
    <string name="latte_string">Latte</string>
    <string name="espresso_ek1_string">Espresso</string>
    <string name="save_and_quick_order_your_favorite_coffee_string">Save and quick order your favorite coffee</string>
    <string name="instant_order_string">Instant Order</string>
    <string name="espresso_is_simply_a_small_amount_of_nearly_boiling_water_is_forced_under_9_10_bars_of_pressure_through_finely_ground_coffee_beans__string">Espresso is simply a small amount of nearly boiling water is forced under 910 bars of pressure through finely-ground coffee beans.</string>
    <string name="cappuccino_ek1_string">Cappuccino</string>
    <string name="this_is_a_drink_involve_the_use_of_cream_instead_of_milk__using_non_dairy_milk_substitutes_and_flavoring_with_cinnamon_or_chocolate_powder__string">This is a drink involve the use of cream instead of milk, using non-dairy milk substitutes and flavoring with cinnamon or chocolate powder.</string>
    <string name="order_now_string">Order now</string>
    <string name="_5_30_pm_ek3_string">5:30 PM</string>
    <string name="coffee__string">Coffee?</string>
    <string name="order_a_coffee_right_to_your_parking_spot_string">Order a coffee right to your parking spot</string>
    <string name="do_you_want_to_be_energized_before_shopping_with_your_wife__maybe_you_have_a_long_drive_ahead_of_you__when_you_are_in_process_of_parking_your_car_or_leaving_you_have_the_option_of_getting_a_coffee_delivered_right_to_your_parking_slot__string">Do you want to be energized before shopping with your wife? Maybe you have a long drive ahead of you.When you are in process of parking your car or leaving you have the option of getting a coffee delivered right to your parking slot. </string>
    <string name="get_started_string">Get Started</string>
    <string name="_5_30_pm_ek4_string">5:30 PM</string>
    <string name="automa_parking_string">Automa Parking</string>
    <string name="lets_start__string">Lets Start!</string>
    <string name="please_choose_the_service_you_require_string">Please choose the service you require</string>
    <string name="buy_a_parking_ticket_string">Buy a parking ticket</string>
    <string name="booking_a_ticket_string">Booking a  ticket</string>
    <string name="order_a_coffee_string">Order a coffee</string>
    <string name="order_an_carwash_string">Order an carwash</string>
    <string name="_5_30_pm_ek5_string">5:30 PM</string>
    <string name="automa_parking_ek1_string">Automa Parking</string>
    <string name="send_mail_string">Send Mail</string>
    <string name="contact_us_ek3_string">Contact Us</string>
    <string name="contact_us_via_your_email_to_our_customer_support_string">Contact us via your email to our customer support</string>
    <string name="full_name_ek1_string">Full Name </string>
    <string name="email_string">Email</string>
    <string name="message_string">Message</string>
    <string name="_5_30_pm_ek6_string">5:30 PM</string>
    <string name="my_profile_string">My Profile</string>
    <string name="account_details_string">Account Details</string>
    <string name="your_information_is_safe_with_us_string">Your information is safe with us</string>
    <string name="delete_account_string">Delete Account</string>
    <string name="edit_account_string">Edit Account</string>
    <string name="save_string">Save</string>
    <string name="full_name___string">Full Name :</string>
    <string name="my_email___string">My Email :</string>
    <string name="password___string">Password :</string>
    <string name="phone_number___string">Phone Number :</string>
    <string name="_0766973598_string">0766973598</string>
    <string name="xxxxxxxxxxxxx_string">xxxxxxxxxxxxx</string>
    <string name="timmy_gmail_com_string">timmy@gmail.com</string>
    <string name="tom_perera_string">Tom Perera</string>
    <string name="_5_30_pm_ek7_string">5:30 PM</string>
    <string name="login_ek3_string">Login</string>
    <string name="welcome_back__string">Welcome Back!</string>
    <string name="begin_automa_parking_string">Begin Automa Parking</string>
    <string name="forgot_your_password__string"><u>Forgot your password?</u></string>
    <string name="do_you_already_have_an_account__sign_up_string">Do you already have an account? Sign Up </string>
    <string name="login_ek4_string">Login</string>
    <string name="enter_your_email_string">Enter Your Email</string>
    <string name="enter_password_string">Enter Password</string>
    <string name="_5_30_pm_ek8_string">5:30 PM</string>
    <string name="sign_up_ek3_string">Sign Up</string>
    <string name="register_with_us__string">Register with us!</string>
    <string name="your_information_is_safe_with_us_ek1_string">Your information is safe with us</string>
    <string name="do_you_already_have_an_account__login_string">Do you already have an account? Login </string>
    <string name="sign_up_ek4_string">Sign Up</string>
    <string name="enter_your_email_ek1_string">Enter Your Email</string>
    <string name="enter_full_name_string">Enter Full Name</string>
    <string name="enter_password_ek1_string">Enter Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="_5_30_pm_ek9_string">5:30 PM</string>
    <string name="automa_parking_ek5_string">Automa Parking</string>
    <string name="automa_parking_is_an_app_which_has_the_capability_of_showing_empty_parking_slots_after_the_pruchase_of_a_ticket_or_a_booking_and_with_our_added_innovation_of_a_coffee_delivery_service_and_a_car_wash__string">Automa Parking is an app which has the capability of showing empty parking slots after the pruchase of a ticket or a booking and with our added innovation of a coffee delivery service and a car wash! </string>
    <string name="accept_our_terms___conditions_string">Accept our Terms &amp; Conditions</string>
    <string name="lets_start__ek1_string">Lets Start!</string>
</resources>