<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<RelativeLayout android:id="@+id/page_login_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__login_ek2"
					android:background="@drawable/_bg__login_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp" />

				<View android:id="@+id/circle6"
					android:background="@drawable/circle6_shape"
					 android:alpha="0.60000002384186"
					 android:layout_marginStart="285dp"
					android:layout_marginTop="-75dp"
					android:layout_width="199dp"
					android:layout_height="199dp" />

				<View android:id="@+id/circle5"
					android:background="@drawable/circle5_shape"
					 android:alpha="0.40000000596046"
					 android:layout_marginStart="266dp"
					android:layout_marginTop="-61dp"
					android:layout_width="212dp"
					android:layout_height="205dp" />

				<TextView android:id="@+id/_5_30_pm_ek7"
					android:textSize="15sp"
					android:textColor="@color/_5_30_pm_color"
					android:layout_marginLeft="24dp"
					android:layout_marginTop="16dp"
					android:layout_width="72dp"
					android:layout_height="24.5dp"
					android:text="@string/_5_30_pm_ek7_string"
					 />

				<ImageView android:id="@+id/battery3"
					android:src="@drawable/battery3"
					android:contentDescription="battery3"
					 android:layout_marginStart="375dp"
					android:layout_marginTop="19dp"
					android:layout_width="20dp"
					android:layout_height="11dp" />

				<ImageView android:id="@+id/signal3"
					android:src="@drawable/signal3"
					android:contentDescription="signal3"
					 android:layout_marginStart="350dp"
					android:layout_marginTop="18dp"
					android:layout_width="14dp"
					android:layout_height="11dp" />

				<TextView android:id="@+id/login_ek3"
					android:textStyle="bold"
					android:textSize="25sp"
					android:textColor="@color/circle20_color"
					android:layout_marginLeft="60dp"
					android:layout_marginTop="77dp"
					android:layout_width="121dp"
					android:layout_height="55.5dp"
					android:text="@string/login_ek3_string"
					 />

				<ImageView android:id="@+id/wifi3"
					android:src="@drawable/wifi3"
					android:contentDescription="wifi3"
					 android:layout_marginStart="329dp"
					android:layout_marginTop="19dp"
					android:layout_width="14dp"
					android:layout_height="11dp" />

				<View
					android:id="@+id/login_background_grey"
					android:layout_width="411dp"
					android:layout_height="472dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="371dp"
					android:alpha="0.52999997138977"
					android:background="@drawable/login_background_grey_shape" />

				<TextView android:id="@+id/welcome_back_"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/_5_30_pm_color"
					android:layout_marginLeft="45dp"
					android:layout_marginTop="396dp"
					android:layout_width="330dp"
					android:layout_height="46dp"
					android:text="@string/welcome_back__string"
					 />

				<TextView android:id="@+id/begin_automa_parking"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_5_30_pm_color"
					android:layout_marginLeft="38dp"
					android:layout_marginTop="425dp"
					android:layout_width="342dp"
					android:layout_height="35.5dp"
					android:text="@string/begin_automa_parking_string"
					 />

				<TextView android:id="@+id/forgot_your_password_"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="13sp"
					android:textColor="@color/forgot_your_password__color"
					android:layout_marginLeft="44dp"
					android:layout_marginTop="615dp"
					android:layout_width="321dp"
					android:layout_height="34.5dp"
					android:text="@string/forgot_your_password__string"
					 />

				<TextView android:id="@+id/do_you_already_have_an_account__sign_up"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_5_30_pm_color"
					android:layout_marginLeft="35dp"
					android:layout_marginTop="726dp"
					android:layout_width="342dp"
					android:layout_height="35.5dp"
					android:text="@string/do_you_already_have_an_account__sign_up_string"
					 />

				<View android:id="@+id/login_button"
					android:background="@drawable/login_button_shape"
					 android:layout_marginStart="48dp"
					android:layout_marginTop="663dp"
					android:layout_width="315dp"
					android:layout_height="51dp" />

				<View android:id="@+id/login_email_txt_feild"
					android:background="@drawable/login_email_txt_feild_shape"
					 android:layout_marginStart="45dp"
					android:layout_marginTop="485dp"
					android:layout_width="315dp"
					android:layout_height="51dp" />

				<View android:id="@+id/login_password_txt_feild"
					android:background="@drawable/login_password_txt_feild_shape"
					 android:layout_marginStart="48dp"
					android:layout_marginTop="554dp"
					android:layout_width="315dp"
					android:layout_height="51dp" />

				<TextView
					android:id="@+id/login_ek4"
					android:layout_width="124dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="141dp"
					android:layout_marginTop="674dp"
					android:gravity="center"
					android:text="@string/login_ek4_string"
					android:textColor="@color/_bg__records_ek2_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/enter_your_email"
					android:layout_width="127dp"
					android:layout_height="30dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="61dp"
					android:layout_marginTop="498dp"
					android:gravity="center"
					android:text="@string/enter_your_email_string"
					android:textColor="@color/_5_30_pm_color"
					android:textSize="14sp" />

				<TextView
					android:id="@+id/enter_password"
					android:layout_width="125dp"
					android:layout_height="32dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="61dp"
					android:layout_marginTop="567dp"
					android:gravity="center"
					android:text="@string/enter_password_string"
					android:textColor="@color/_5_30_pm_color"
					android:textSize="14sp" />

				<ImageView android:id="@+id/login_img"
					android:src="@drawable/login_img"
					android:contentDescription="login_img"
					 android:layout_marginStart="48dp"
					android:layout_marginTop="136dp"
					android:layout_width="312dp"
					android:layout_height="223dp" />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>